--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <title>Uizer - Bootstrap Coming Soon Template</title>
 
         <!-- CSS -->
-        <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">        
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
         <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="assets/elegant-font/code/style.css">
         <link rel="stylesheet" href="assets/css/animate.css">
